--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,189 @@
-﻿# Node.js
+# Dependencies
 node_modules/
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.backup
 
-# Logs & temp
+# Logs
 logs/
-uploads/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# System/IDE
-.DS_Store
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+database.db
+
+# Uploaded files
+uploads/videos/*
+uploads/images/*
+uploads/documents/*
+uploads/avatars/*
+!uploads/videos/.gitkeep
+!uploads/images/.gitkeep
+!uploads/documents/.gitkeep
+!uploads/avatars/.gitkeep
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+
+# IDE and Editor files
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build artifacts
+dist/
+build/
+
+# Testing
+coverage/
+test-results/
+playwright-report/
+
+# Docker
+.dockerignore
+
+# Backup files
+*.backup
+*.bak
+*.sql.bak
+backup_*.sql
+
+# SSL certificates
+*.pem
+*.key
+*.crt
+*.cert
+
+# Redis dump
+dump.rdb
+
+# Process files
+*.pid
+
+# Documentation build
+docs/_build/
+
+# JetBrains IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Visual Studio Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+
+# Local configuration overrides
+config/local.js
+config/local.json
+
+# Error logs
+error.log
+access.log
+
+# PM2 logs
+pm2.log
+pm2-error.log
+
+# Application specific
+sessions/
+cache/
+
+# Development tools
+.eslintcache
+.stylelintcache
+
+# Misc
+.cache
+.temp
+.sass-cache
