--- a/trading-platform/frontend/package.json
+++ b/trading-platform/frontend/package.json
@@ -11,22 +11,22 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.290.0",
-    "recharts": "^2.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2",
-    "zustand": "^4.4.1",
-    "react-query": "^3.39.3",
     "react-hot-toast": "^2.4.1",
-    "clsx": "^2.0.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
-    "date-fns": "^2.30.0"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -34,12 +34,12 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
